--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-documentation/*
+documentation/main.aux
+documentation/main.fdb_latexmk
+documentation/main.fls
+documentation/main.log
+documentation/main.out
+documentation/main.synctex.gz
+documentation/main.toc
