--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>web4</name>
-	<description>lab 4 for web Spring Boot</description>
+	<name>zhukov finance</name>
+	<description>Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
